--- a/march-update/portfolio/portfolio.html
+++ b/march-update/portfolio/portfolio.html
@@ -12,14 +12,17 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
+        <link rel="stylesheet" type="text/css" href="../fonts/MyFontsWebfontsKit/MyFontsWebfontsKit.css">
+        <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700|Playfair+Display:400,700' rel='stylesheet' type='text/css'>
+
         <!-- Place favicon.ico in the root directory -->
         <link rel="icon" href="favicon.ico">
 
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
-            <link rel="stylesheet" href="css/font-awesome.css">
-        <link rel="stylesheet" href="css/font-awesome.min.css">
-        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+        <link rel="stylesheet" href="../css/normalize.css">
+        <link rel="stylesheet" href="../css/main.css">
+        <link rel="stylesheet" href="../css/font-awesome.css">
+        <link rel="stylesheet" href="../css/font-awesome.min.css">
+        <script src="../js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body>
         <!--[if lt IE 8]>
@@ -28,19 +31,238 @@
 
         <!-- Add your site or application content here -->
         <div class="wrapper">
-            <header class="page-header">
-                <figure class="logo">
-                    <a href="../index.html"><img src="../img/logo.svg"/></a>
-                </figure>
-                <figure>
-                    <i class="fa fa-angle-double-down fa-3x"></i>
-                </figure>
-            </header>
-        
-        <section class="main">
-            
+        <header class="page-header">
+            <figure class="logo">
+                <img src="../img/logo.svg"/>
+            </figure>
+            <figure>
+                <a id="toggle-nav" href="#"><i class="fa fa-angle-double-down fa-3x"></i></a>
+            </figure>
+        </header>
+        <section id="menu-main" class="uppercase">
+            <div class="menu-wrapper">
+                <ul class="menu-active">
+                    <li>
+                        <a href="#">
+                            Home                                
+                        </a>
+                    </li>
+                    <li class ="spacer"></li>
+                    <li>
+                        <a href="../about/about.html">
+                            My Story
+                        </a>
+                    </li>
+                    <li class ="spacer"></li>
+                    <li>
+                        <a href="../packages/packages.html">
+                            Packages
+                        </a>
+                    </li>
+                    <li class ="spacer"></li>
+                    <li>
+                        <a href="portfolio.html">
+                            Portfolio
+                        </a>
+                    </li>
+                    <li class ="spacer"></li>
+                    <li>
+                        <a href="../process/process.html">
+                            Process
+                        </a>
+                    </li>
+                    <li class ="spacer"></li>
+                    <li>
+                        <a href="">
+                            Archives
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </section>
-        <footer>
+        <div class="menu-hide">
+        <section class="main portfolio-main">
+            <div class="portfolio-wrapper">
+                <article class="portfolio-item"> <!-- ITEM #1 -->
+                    <div class="portfolio-header">
+                        <header>
+                            <div class="portfolio-item-header">
+                                Side Project
+                            </div>
+                            <div class="card-tags uppercase">
+                                Web Design, Frontend, Project Management
+                            </div>
+                        </header>
+                    </div>
+                    <div class="portfolio-content">
+                        <div class="content-title">
+                            Working to be Awesome
+                        </div>
+                        <div class="content">
+                            <figure>
+                                <a href=""><img src=""></a>
+                            </figure>
+                            <div>
+                                <p class="content-description">
+                                    Working to be Awesome will be an online directory of independent e-courses. I'm building this project to help other side hustlers find the course that helps them get their side hustle or new career started. Checkout the progress here. All of my design elements are available here.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+                <article class="portfolio-item"> <!-- ITEM #2 -->
+                    <div class="portfolio-header">
+                        <header>
+                            <div class="portfolio-item-header">
+                                Responsive Design
+                            </div>
+                            <div class="card-tags uppercase">
+                                Web Design, Frontend, Bootstrap
+                            </div>
+                        </header>
+                    </div>
+                    <div class="portfolio-content">
+                        <div class="content-title">
+                            Loud Vibes
+                        </div>
+                        <div class="content">
+                            <figure>
+                                <a href=""><img src=""></a>
+                            </figure>
+                            <div>
+                                <p class="content-description">
+                                    Loud Vibes is a small reggae and dancehall concert site designed to share upcoming concerts, reviews, and music news-while keeping gossip to a minimum.
+                                </p>
+
+                                <p class="content-description">
+                                    I started by creating user personas for Loud Vibes target users. The target users are true fans of reggae and dancehall and use it as their outlet from their very hectic lives. This led me to pay more attention to the mobile experience. I designed mobile first and adjusted the layout to the devices using progressive enhancement. I relied on the user flows to develop a sitemap that made it simple for users to complete vital tasks. After testing my site, I adjusted the layout to create the best design solution for Loud Vibes users.
+                                </p>
+
+c
+                                    This is the first project I created a style tile for instead of a mood board and I am really excited about how functional they are when it is time to code. All of my design elements are available here.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+                <article class="portfolio-item"> <!-- ITEM #3 -->
+                    <div class="portfolio-header">
+                        <header>
+                            <div class="portfolio-item-header">
+                                Geolocation
+                            </div>
+                            <div class="card-tags uppercase">
+                                jquery
+                            </div>
+                        </header>
+                    </div>
+                    <div class="portfolio-content">
+                        <div class="content-title">
+                            Are You Lost?
+                        </div>
+                        <div class="content">
+                            <figure>
+                                <a href=""><img src=""></a>
+                            </figure>
+                            <div>
+                                <p class="content-description">
+                                    This quick and dirty class project was created to gain experience with geolocation in the browser via jQuery. Checkout the code here.
+                                </p>
+
+                                <p class="content-description">
+                                    In the future, this is a great skill for me to apply to sites where the user needs help finding a location.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+                <article class="portfolio-item"> <!-- ITEM #4 -->
+                    <div class="portfolio-header">
+                        <header>
+                            <div class="portfolio-item-header">
+                                Flexbox
+                            </div>
+                            <div class="card-tags uppercase">
+                                HTML5, CSS3
+                            </div>
+                        </header>
+                    </div>
+                    <div class="portfolio-content">
+                        <div class="content-title">
+                            Bio Page
+                        </div>
+                        <div class="content">
+                            <figure>
+                                <a href=""><img src=""></a>
+                            </figure>
+                            <div>
+                                <p class="content-description">
+                                    Flexbox, what can I say about this gift to HTML5? I used it to create a clean layout for a single-page portfolio site. The way all of the elements in the tri-columns are perfectly centered suits my OCD-tendencies quite well. I also included Font Awesome icons for my social because of their ease of use. Code here.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+                <article class="portfolio-item"> <!-- ITEM #5 -->
+                    <div class="portfolio-header">
+                        <header>
+                            <div class="portfolio-item-header">
+                                Archive: Original Portfolio
+                            </div>
+                            <div class="card-tags uppercase">
+                                Web Design, Frontend
+                            </div>
+                        </header>
+                    </div>
+                    <div class="portfolio-content">
+                        <div class="content-title">
+                            aleiawalker.com 1.5
+                        </div>
+                        <div class="content">
+                            <figure>
+                                <a href=""><img src=""></a>
+                            </figure>
+                            <div>
+                                <p class="content-description">
+                                    This is the third stylistic iteration of a site which started as a capstone project for a web design course. I started by building out the user personas and found the target user to be hiring managers with short amounts of time to dedicate to prospective employee portfolios. That is why I concentrated on a single page layout so that everything was immediately accessible to the user. After the user personas I built out user flows, sitemaps, and wireframes—all codependent on one another. I created all of the design elements (logo, logo mark, and signature) and incorporated them into my mockup. The site was not designed mobile first but I will be redesigning it to value the mobile experience.
+                                </p>
+                                <p class="content-description">
+                                    In my mobile-first redesign, I plan to convert the HTML to HTML5, the CSS to SASS, and use Flexbox to stabilize the layout. I will also use the jQuery flyout menu that I created for the mobile version to incorporate a hidden menu into my new design. Please check out some of the previous versions ongithub.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+                <article class="portfolio-item">
+                    <div class="portfolio-header">
+                        <header>
+                            <div class="portfolio-item-header">
+                                Coming Soon
+                            </div>
+                            <div class="card-tags uppercase">
+                                Your project
+                            </div>
+                        </header>
+                    </div>
+                    <div class="portfolio-content">
+                        <div class="content-title">
+                            Working to be Awesome
+                        </div>
+                        <div class="content">
+                            <figure>
+                                <a href=""><img src=""></a>
+                            </figure>
+                            <div>
+                                <p class="content-description">
+                                    Do you want to be here? Take a look at <a href="../packages/packages.html">these.</a>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </article>
+            </div>
+        </section>
+        <footer class="footer">
             <div class="footer-copy">
                 <p class="hairline footer-tag">Aleia elsewhere on the web</p>
                 <ul class="social">
@@ -71,6 +293,28 @@
                     </li>
                 </ul>
             </footer>
+            </div> <!-- menu hide -->
+        </div> <!-- wrapper div ended -->
+
+        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+        <script>
+            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+            e.src='https://www.google-analytics.com/analytics.js';
+            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+            ga('create','UA-XXXXX-X','auto');ga('send','pageview');
+        </script>
+
+        <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.js"></script>
+        <script>
+        $(document).ready(function() {
+            $('#toggle-nav').click(function() {
+                $('#menu-main').slideToggle("slow");
+                $('.menu-hide').slideDown();
+            });
+        });                
+        </script>
         </div>
 
 
