--- a/march-update/index.html
+++ b/march-update/index.html
@@ -102,7 +102,9 @@
                     <div class="hire-me">
                         <p class="hire-copy">Looking for a long-term designer and/or developer</p>
                             <button>
-                                <p>Hire Me</p>
+                                <a href="portfolio/portfolio.html">
+                                    <p>Hire Me</p>
+                                </a>
                             </button>
                     </div>
                 </div>
